--- a/aula19/style.css
+++ b/aula19/style.css
@@ -20,6 +20,11 @@ section {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
 
+select {
+    margin: 5px;
+    width: 150px;
+}
+
 footer {
     color: white;
     text-align: center;
